# model_train_control

./: README.md  compile_upload_mtc.sh  launch_mtc.sh
common_src/: globals.h  loco.cpp  loco.h  state.cpp
common_src/config/: c11_2021.yaml  d51.yaml  default.yaml  t18.yaml  terrier.yaml
docker/: Dockerfile  docker-compose.yml  docker_info.txt  run_ros_mtc.sh  setup_arduino.sh
model_train_control_arduino/: CMakeLists.txt
mtc_logic/: CMakeLists.txt
mtc_logic/src/: decision_node.cpp  decision_node.h
mtc_ui/: CMakeLists.txt
mtc_ui/src/: communicator.cpp  communicator.h  handler.cpp  handler.h  handler.qml  main.cpp
